--- a/Changes
+++ b/Changes
@@ -1,6 +1,13 @@
 Revision history for Perl extension Audio::WMA.
 
-0.01  Thu Dec  4 13:46:05 2003
+0.1 Thu Dec  4 13:46:05 2003
 	- original version; created by h2xs 1.22 with options
 		-n Audio::WMA -X -A
 
+0.2 Mon Feb 16 17:22:25 2004
+
+	Integrated sanity checks from Dean. Print out the file name if we error out.
+
+0.3 Sat Sep 25 19:40:41 PDT 2004
+
+	Expose if a file is DRM encrypted - patch from Kevin Deane-Freeman
