Import of DANIEL/Audio-WMA-0.7 from CPAN.
gitpan-cpan-distribution: Audio-WMA
gitpan-cpan-version:      0.7
gitpan-cpan-path:         DANIEL/Audio-WMA-0.7.tar.gz
gitpan-cpan-author:       DANIEL
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Audio::WMA.
 
+0.7 Thu Oct  7 16:16:45 PDT 2004
+
+	Fix infinite loop case for 0 length objects.
+
 0.6 Sat Oct  2 11:35:56 PDT 2004
 
 	Handle Extended Header Objects, and Metadata Library Objects for additional author information.
