--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Audio/WMA version 0.7
+Audio/WMA version 1.0
 ======================
 
 The README is used to introduce the module and provide instructions on
@@ -25,7 +25,7 @@ COPYRIGHT AND LICENCE
 
 Put the correct copyright and licence information here.
 
-Copyright (C) 2003-2004 Dan Sully
+Copyright (C) 2003-2007 Dan Sully & Slim Devices
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself. 
